[package]
name = "resistance-civil-protection"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.13.0"
keyring = { version = "3.6.1", features = ["sync-secret-service"] }
lettre = "0.11.11"
regex = "1.11.1"
rpassword = "7.3.1"
serde = "1.0.216"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
